# prompt-enhancer

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  HANDOFF.md  LICENSE  README.md  install.sh  prompt-benchmark.py  prompt-enhancer.py  prompt-install.py  prompt-store.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
brew/: prompt-enhancer.rb
docs/: demo.tape
legacy/: README.md  prompt-benchmark.py  prompt-install.py
src/prompt_enhancer/: __init__.py  agents.py  cli.py  dashboard.py  lint.py  term.py  view.py
src/prompt_enhancer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
tests/: test_all.py
