[project]
name = "prompt-enhancer-cli"
version = "1.6.1"
description = "Reverse-engineered from Auggie's Ctrl+P — transforms rough ideas into production system prompts for AI coding agents"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "hongphuc5497", email = "hongphuc.dthp@gmail.com" }]
keywords = ["prompt-engineering", "ai", "llm", "claude-code", "codex", "cursor", "auggie", "system-prompt", "agent"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.scripts]
prompt-enhancer = "prompt_enhancer.cli:main"
pe = "prompt_enhancer.cli:main"

[project.urls]
Homepage = "https://github.com/hongphuc5497/prompt-enhancer"
Repository = "https://github.com/hongphuc5497/prompt-enhancer.git"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
